--- a/home_page/static/home_css/templatemo-hexashop.css
+++ b/home_page/static/home_css/templatemo-hexashop.css
@@ -12,7 +12,7 @@ Table of contents
 01. font & reset css
 02. reset
 03. global styles
-04. header
+04. h
 05. banner
 06. features
 07. testimonials
@@ -34,10 +34,10 @@ font & reset css
 reset
 --------------------------------------------- 
 */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
+h, b, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
 pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q,
 s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
-figure, header, nav, section, article, aside, footer, figcaption {
+figure, h, nav-tem, section, article, aside, footer, figcaption {
   margin: 0;
   padding: 0;
   border: 0;
@@ -57,11 +57,11 @@ figure, header, nav, section, article, aside, footer, figcaption {
   display: inline-block;
 }
 
-html[xmlns] .clearfix {
+h[xmlns] .clearfix {
   display: block;
 }
 
-* html .clearfix {
+* h .clearfix {
   height: 1%;
 }
 
@@ -71,7 +71,7 @@ ul, li {
   list-style: none;
 }
 
-header, nav, section, article, aside, footer, hgroup {
+h, nav-tem, section, article, aside, footer, hgroup {
   display: block;
 }
 
@@ -79,7 +79,7 @@ header, nav, section, article, aside, footer, hgroup {
   box-sizing: border-box;
 }
 
-html, body {
+h, b {
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
   background-color: #fff;
@@ -113,8 +113,8 @@ p {
 global styles
 --------------------------------------------- 
 */
-html,
-body {
+h,
+b {
   background: #fff;
   font-family: 'Poppins', sans-serif;
 }
@@ -130,7 +130,7 @@ body {
 }
 
 @media (max-width: 991px) {
-  html, body {
+  h, b {
     overflow-x: hidden;
   }
   .mobile-top-fix {
@@ -203,11 +203,11 @@ body {
 
 /* 
 ---------------------------------------------
-header
+h
 --------------------------------------------- 
 */
 
-.background-header {
+/* .background-h {
   border-bottom: none !important;
   background-color: #fff;
   height: 80px!important;
@@ -218,20 +218,20 @@ header
   box-shadow: 0px 0px 10px rgba(0,0,0,0.15)!important;
 }
 
-.background-header .logo,
-.background-header .main-nav .nav li a {
+.background-h .logo,
+.background-h .main-nav-tem-tem .nav-tem-tem li a {
   color: #1e1e1e!important;
 }
 
-.background-header .main-nav .nav li:hover a {
+.background-h .main-nav-tem-tem .nav-tem-tem li:hover a {
   color: #2a2a2a!important;
 }
 
-.background-header .nav li a.active {
+.background-h .nav-tem-tem li a.active {
   color: #2a2a2a!important;
 }
 
-.header-area {
+.h-area {
   border-bottom: 3px dotted #eee;
   box-shadow: none;
   background-color: #fff;
@@ -247,12 +247,12 @@ header
   transition: all .5s ease 0s;
 }
 
-.header-area .main-nav {
+.h-area .main-nav-tem-tem {
   min-height: 80px;
   background: transparent;
 }
 
-.header-area .main-nav .logo {
+.h-area .main-nav-tem-tem .logo {
   line-height: 100px;
   color: #fff;
   font-size: 28px;
@@ -266,15 +266,15 @@ header
   transition: all 0.3s ease 0s;
 }
 
-.background-header .main-nav .logo {
+.background-h .main-nav-tem-tem .logo {
   line-height: 75px;
 }
 
-.background-header .nav {
+.background-h .nav-tem-tem {
   margin-top: 20px !important;
 }
 
-.header-area .main-nav .nav {
+.h-area .main-nav-tem-tem .nav-tem-tem {
   float: right;
   margin-top: 30px;
   margin-right: 0px;
@@ -287,16 +287,16 @@ header
   z-index: 999;
 }
 
-.header-area .main-nav .nav li {
+.h-area .main-nav-tem-tem .nav-tem-tem li {
   padding-left: 15px;
   padding-right: 15px;
 }
 
-.header-area .main-nav .nav li:last-child {
+.h-area .main-nav-tem-tem .nav-tem-tem li:last-child {
   padding-right: 0px;
 }
 
-.header-area .main-nav .nav li a {
+.h-area .main-nav-tem-tem .nav-tem-tem li a {
   display: block;
   font-weight: 600;
   font-size: 15px;
@@ -312,27 +312,27 @@ header
   letter-spacing: 1px;
 }
 
-.header-area .main-nav .nav li a {
+.h-area .main-nav-tem-tem .nav-tem-tem li a {
   color: #2a2a2a;
 }
 
-.header-area .main-nav .nav li:hover a,
-.header-area .main-nav .nav li a.active {
+.h-area .main-nav-tem-tem .nav-tem li:hover a,
+.h-area .main-nav-tem .nav-tem li a.active {
   color: #aaa!important;
 }
 
-.background-header .main-nav .nav li:hover a,
-.background-header .main-nav .nav li a.active {
+.background-h .main-nav-tem .nav-tem li:hover a,
+.background-h .main-nav-tem .nav-tem li a.active {
   color: #aaa!important;
   opacity: 1;
 }
 
-.header-area .main-nav .nav li.submenu {
+.h-area .main-nav-tem .nav-tem li.submenu {
   position: relative;
   padding-right: 30px;
 }
 
-.header-area .main-nav .nav li.submenu:after {
+.h-area .main-nav-tem .nav-tem li.submenu:after {
   font-family: FontAwesome;
   content: "\f107";
   font-size: 12px;
@@ -342,11 +342,11 @@ header
   top: 12px;
 }
 
-.background-header .main-nav .nav li.submenu:after {
+.background-h .main-nav-tem .nav-tem li.submenu:after {
   color: #2a2a2a;
 }
 
-.header-area .main-nav .nav li.submenu ul {
+.h-area .main-nav-tem .nav-tem li.submenu ul {
   position: absolute;
   width: 200px;
   box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06);
@@ -359,13 +359,13 @@ header
   transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
 }
 
-.header-area .main-nav .nav li.submenu ul li {
+.h-area .main-nav-tem .nav-tem li.submenu ul li {
   margin-left: 0px;
   padding-left: 0px;
   padding-right: 0px;
 }
 
-.header-area .main-nav .nav li.submenu ul li a {
+.h-area .main-nav-tem .nav-tem li.submenu ul li a {
   opacity: 1;
   display: block;
   background: #f7f7f7;
@@ -383,17 +383,17 @@ header
   border-bottom: 1px solid #eee;
 }
 
-.header-area .main-nav .nav li.submenu ul li a:hover {
+.h-area .main-nav-tem .nav-tem li.submenu ul li a:hover {
   background: #fff;
   color: #aaa!important;
   padding-left: 25px;
 }
 
-.header-area .main-nav .nav li.submenu ul li a:hover:before {
+.h-area .main-nav-tem .nav-tem li.submenu ul li a:hover:before {
   width: 3px;
 }
 
-.header-area .main-nav .nav li.submenu:hover ul {
+.h-area .main-nav-tem .nav-tem li.submenu:hover ul {
   visibility: visible;
   opacity: 1;
   z-index: 1;
@@ -401,7 +401,7 @@ header
   transition-delay: 0s, 0s, 0.3s;
 }
 
-.header-area .main-nav .menu-trigger {
+.h-area .main-nav-tem .menu-trigger {
   cursor: pointer;
   display: block;
   position: absolute;
@@ -414,13 +414,13 @@ header
   display: none;
 }
 
-.background-header .main-nav .menu-trigger {
+.background-h .main-nav-tem .menu-trigger {
   top: 23px;
 }
 
-.header-area .main-nav .menu-trigger span,
-.header-area .main-nav .menu-trigger span:before,
-.header-area .main-nav .menu-trigger span:after {
+.h-area .main-nav-tem .menu-trigger span,
+.h-area .main-nav-tem .menu-trigger span:before,
+.h-area .main-nav-tem .menu-trigger span:after {
   -moz-transition: all 0.4s;
   -o-transition: all 0.4s;
   -webkit-transition: all 0.4s;
@@ -433,14 +433,14 @@ header
   left: 0;
 }
 
-.background-header .main-nav .menu-trigger span,
-.background-header .main-nav .menu-trigger span:before,
-.background-header .main-nav .menu-trigger span:after {
+.background-h .main-nav-tem .menu-trigger span,
+.background-h .main-nav-tem .menu-trigger span:before,
+.background-h .main-nav-tem .menu-trigger span:after {
   background-color: #1e1e1e;
 }
 
-.header-area .main-nav .menu-trigger span:before,
-.header-area .main-nav .menu-trigger span:after {
+.h-area .main-nav-tem .menu-trigger span:before,
+.h-area .main-nav-tem .menu-trigger span:after {
   -moz-transition: all 0.4s;
   -o-transition: all 0.4s;
   -webkit-transition: all 0.4s;
@@ -454,21 +454,21 @@ header
   width: 75%;
 }
 
-.background-header .main-nav .menu-trigger span:before,
-.background-header .main-nav .menu-trigger span:after {
+.background-h .main-nav-tem .menu-trigger span:before,
+.background-h .main-nav-tem .menu-trigger span:after {
   background-color: #1e1e1e;
 }
 
-.header-area .main-nav .menu-trigger span:before,
-.header-area .main-nav .menu-trigger span:after {
+.h-area .main-nav-tem .menu-trigger span:before,
+.h-area .main-nav-tem .menu-trigger span:after {
   content: "";
 }
 
-.header-area .main-nav .menu-trigger span {
+.h-area .main-nav-tem .menu-trigger span {
   top: 16px;
 }
 
-.header-area .main-nav .menu-trigger span:before {
+.h-area .main-nav-tem .menu-trigger span:before {
   -moz-transform-origin: 33% 100%;
   -ms-transform-origin: 33% 100%;
   -webkit-transform-origin: 33% 100%;
@@ -477,7 +477,7 @@ header
   z-index: 10;
 }
 
-.header-area .main-nav .menu-trigger span:after {
+.h-area .main-nav-tem .menu-trigger span:after {
   -moz-transform-origin: 33% 0;
   -ms-transform-origin: 33% 0;
   -webkit-transform-origin: 33% 0;
@@ -485,14 +485,14 @@ header
   top: 10px;
 }
 
-.header-area .main-nav .menu-trigger.active span,
-.header-area .main-nav .menu-trigger.active span:before,
-.header-area .main-nav .menu-trigger.active span:after {
+.h-area .main-nav-tem .menu-trigger.active span,
+.h-area .main-nav-tem .menu-trigger.active span:before,
+.h-area .main-nav-tem .menu-trigger.active span:after {
   background-color: transparent;
   width: 100%;
 }
 
-.header-area .main-nav .menu-trigger.active span:before {
+.h-area .main-nav-tem .menu-trigger.active span:before {
   -moz-transform: translateY(6px) translateX(1px) rotate(45deg);
   -ms-transform: translateY(6px) translateX(1px) rotate(45deg);
   -webkit-transform: translateY(6px) translateX(1px) rotate(45deg);
@@ -500,11 +500,11 @@ header
   background-color: #1e1e1e;
 }
 
-.background-header .main-nav .menu-trigger.active span:before {
+.background-h .main-nav-tem .menu-trigger.active span:before {
   background-color: #1e1e1e;
 }
 
-.header-area .main-nav .menu-trigger.active span:after {
+.h-area .main-nav-tem .menu-trigger.active span:after {
   -moz-transform: translateY(-6px) translateX(1px) rotate(-45deg);
   -ms-transform: translateY(-6px) translateX(1px) rotate(-45deg);
   -webkit-transform: translateY(-6px) translateX(1px) rotate(-45deg);
@@ -512,64 +512,64 @@ header
   background-color: #1e1e1e;
 }
 
-.background-header .main-nav .menu-trigger.active span:after {
+.background-h .main-nav-tem .menu-trigger.active span:after {
   background-color: #1e1e1e;
 }
 
-.header-area.header-sticky {
+.h-area.h-sticky {
   min-height: 80px;
 }
 
-.header-area .nav {
+.h-area .nav-tem {
   margin-top: 30px;
 }
 
-.header-area.header-sticky .nav li a.active {
+.h-area.h-sticky .nav-tem li a.active {
   color: #aaa;
 }
 
 @media (max-width: 1200px) {
-  .header-area .main-nav .nav li {
+  .h-area .main-nav-tem .nav-tem li {
     padding-left: 12px;
     padding-right: 12px;
   }
-  .header-area .main-nav:before {
+  .h-area .main-nav-tem:before {
     display: none;
   }
 }
 
 @media (max-width: 767px) {
-  .header-area .main-nav .logo {
+  .h-area .main-nav-tem .logo {
     color: #1e1e1e;
   }
-  .header-area.header-sticky .nav li a:hover,
-  .header-area.header-sticky .nav li a.active {
+  .h-area.h-sticky .nav-tem li a:hover,
+  .h-area.h-sticky .nav-tem li a.active {
     color: #aaa!important;
     opacity: 1;
   }
-  .header-area.header-sticky .nav li.search-icon a {
+  .h-area.h-sticky .nav-tem li.search-icon a {
     width: 100%;
   }
-  .header-area {
+  .h-area {
     background-color: #f7f7f7;
     padding: 0px 15px;
     height: 100px;
     box-shadow: none;
     text-align: center;
   }
-  .header-area .container {
+  .h-area .container {
     padding: 0px;
   }
-  .header-area .logo {
+  .h-area .logo {
     margin-left: 30px;
   }
-  .header-area .menu-trigger {
+  .h-area .menu-trigger {
     display: block !important;
   }
-  .header-area .main-nav {
+  .h-area .main-nav-tem {
     overflow: hidden;
   }
-  .header-area .main-nav .nav {
+  .h-area .main-nav-tem .nav-tem {
     float: none;
     width: 100%;
     display: none;
@@ -579,20 +579,20 @@ header
     transition: all 0s ease 0s;
     margin-left: 0px;
   }
-  .header-area .main-nav .nav li:first-child {
+  .h-area .main-nav-tem .nav-tem li:first-child {
     border-top: 1px solid #eee;
   }
-  .header-area.header-sticky .nav {
+  .h-area.h-sticky .nav-tem {
     margin-top: 100px !important;
   }
-  .header-area .main-nav .nav li {
+  .h-area .main-nav-tem .nav-tem li {
     width: 100%;
     background: #fff;
     border-bottom: 1px solid #eee;
     padding-left: 0px !important;
     padding-right: 0px !important;
   }
-  .header-area .main-nav .nav li a {
+  .h-area .main-nav-tem .nav-tem li a {
     height: 50px !important;
     line-height: 50px !important;
     padding: 0px !important;
@@ -600,11 +600,11 @@ header
     background: #f7f7f7 !important;
     color: #191a20 !important;
   }
-  .header-area .main-nav .nav li a:hover {
+  .h-area .main-nav-tem .nav-tem li a:hover {
     background: #eee !important;
     color: #aaa!important;
   }
-  .header-area .main-nav .nav li.submenu ul {
+  .h-area .main-nav-tem .nav-tem li.submenu ul {
     position: relative;
     visibility: inherit;
     opacity: 1;
@@ -616,35 +616,37 @@ header
     box-shadow: none;
     height: 0px;
   }
-  .header-area .main-nav .nav li.submenu ul li a {
+  .h-area .main-nav-tem .nav-tem li.submenu ul li a {
     font-size: 12px;
     font-weight: 400;
   }
-  .header-area .main-nav .nav li.submenu ul li a:hover:before {
+  .h-area .main-nav-tem .nav-tem li.submenu ul li a:hover:before {
     width: 0px;
   }
-  .header-area .main-nav .nav li.submenu ul.active {
+  .h-area .main-nav-tem .nav-tem li.submenu ul.active {
     height: auto !important;
   }
-  .header-area .main-nav .nav li.submenu:after {
+  .h-area .main-nav-tem .nav-tem li.submenu:after {
     color: #3B566E;
     right: 25px;
     font-size: 14px;
     top: 15px;
   }
-  .header-area .main-nav .nav li.submenu:hover ul, .header-area .main-nav .nav li.submenu:focus ul {
+  .h-area .main-nav-tem .nav-tem li.submenu:hover ul, .h-area .main-nav-tem .nav-tem li.submenu:focus ul {
     height: 0px;
   }
 }
 
 @media (min-width: 767px) {
-  .header-area .main-nav .nav {
+  .h-area .main-nav-tem .nav-tem {
     display: flex !important;
   }
 }
 
 
-/* 
+ 
+ */
+ /*
 ---------------------------------------------
 banner
 --------------------------------------------- 
@@ -846,7 +848,7 @@ Men
 }
 
 
-#men .owl-nav {
+#men .owl-nav-tem {
   text-align: center;
   position: absolute;
   width: 100%;
@@ -858,18 +860,18 @@ Men
   display: none;
 }
     
-#men .owl-nav .owl-prev{
+#men .owl-nav-tem .owl-prev{
   position: absolute;
   left: -80px;
   outline: none;
 }
 
-#men .owl-nav .owl-prev span,
-#men .owl-nav .owl-next span {
+#men .owl-nav-tem .owl-prev span,
+#men .owl-nav-tem .owl-next span {
   opacity: 0;
 }
 
-#men .owl-nav .owl-prev:before {
+#men .owl-nav-tem .owl-prev:before {
   display: inline-block;
   font-family: 'FontAwesome';
   color: #2a2a2a;
@@ -883,31 +885,31 @@ Men
   border :1px solid #2a2a2a;
 }
 
-#men .owl-nav .owl-prev {
+#men .owl-nav-tem .owl-prev {
   opacity: 0.75;
   transition: all .5s;
 }
 
-#men .owl-nav .owl-prev:hover {
+#men .owl-nav-tem .owl-prev:hover {
   opacity: 1;
 }
 
-#men .owl-nav .owl-next {
+#men .owl-nav-tem .owl-next {
   opacity: 0.75;
   transition: all .5s;
 }
 
-#men .owl-nav .owl-next:hover {
+#men .owl-nav-tem .owl-next:hover {
   opacity: 1;
 }
 
-#men .owl-nav .owl-next{
+#men .owl-nav-tem .owl-next{
   outline: none;
   position: absolute;
   right: -85px;
 }
 
-#men .owl-nav .owl-next:before {
+#men .owl-nav-tem .owl-next:before {
   display: inline-block;
   font-family: 'FontAwesome';
   color: #2a2a2a;
@@ -1007,7 +1009,7 @@ Women
 }
 
 
-#women .owl-nav {
+#women .owl-nav-tem {
   text-align: center;
   position: absolute;
   width: 100%;
@@ -1019,18 +1021,18 @@ Women
   display: none;
 }
     
-#women .owl-nav .owl-prev{
+#women .owl-nav-tem .owl-prev{
   position: absolute;
   left: -80px;
   outline: none;
 }
 
-#women .owl-nav .owl-prev span,
-#women .owl-nav .owl-next span {
+#women .owl-nav-tem .owl-prev span,
+#women .owl-nav-tem .owl-next span {
   opacity: 0;
 }
 
-#women .owl-nav .owl-prev:before {
+#women .owl-nav-tem .owl-prev:before {
   display: inline-block;
   font-family: 'FontAwesome';
   color: #2a2a2a;
@@ -1044,31 +1046,31 @@ Women
   border :1px solid #2a2a2a;
 }
 
-#women .owl-nav .owl-prev {
+#women .owl-nav-tem .owl-prev {
   opacity: 0.75;
   transition: all .5s;
 }
 
-#women .owl-nav .owl-prev:hover {
+#women .owl-nav-tem .owl-prev:hover {
   opacity: 1;
 }
 
-#women .owl-nav .owl-next {
+#women .owl-nav-tem .owl-next {
   opacity: 0.75;
   transition: all .5s;
 }
 
-#women .owl-nav .owl-next:hover {
+#women .owl-nav-tem .owl-next:hover {
   opacity: 1;
 }
 
-#women .owl-nav .owl-next{
+#women .owl-nav-tem .owl-next{
   outline: none;
   position: absolute;
   right: -85px;
 }
 
-#women .owl-nav .owl-next:before {
+#women .owl-nav-tem .owl-next:before {
   display: inline-block;
   font-family: 'FontAwesome';
   color: #2a2a2a;
@@ -1167,7 +1169,7 @@ Kids
 }
 
 
-#kids .owl-nav {
+#kids .owl-nav-tem {
   text-align: center;
   position: absolute;
   width: 100%;
@@ -1179,18 +1181,18 @@ Kids
   display: none;
 }
     
-#kids .owl-nav .owl-prev{
+#kids .owl-nav-tem .owl-prev{
   position: absolute;
   left: -80px;
   outline: none;
 }
 
-#kids .owl-nav .owl-prev span,
-#kids .owl-nav .owl-next span {
+#kids .owl-nav-tem .owl-prev span,
+#kids .owl-nav-tem .owl-next span {
   opacity: 0;
 }
 
-#kids .owl-nav .owl-prev:before {
+#kids .owl-nav-tem .owl-prev:before {
   display: inline-block;
   font-family: 'FontAwesome';
   color: #2a2a2a;
@@ -1204,31 +1206,31 @@ Kids
   border :1px solid #2a2a2a;
 }
 
-#kids .owl-nav .owl-prev {
+#kids .owl-nav-tem .owl-prev {
   opacity: 0.75;
   transition: all .5s;
 }
 
-#kids .owl-nav .owl-prev:hover {
+#kids .owl-nav-tem .owl-prev:hover {
   opacity: 1;
 }
 
-#kids .owl-nav .owl-next {
+#kids .owl-nav-tem .owl-next {
   opacity: 0.75;
   transition: all .5s;
 }
 
-#kids .owl-nav .owl-next:hover {
+#kids .owl-nav-tem .owl-next:hover {
   opacity: 1;
 }
 
-#kids .owl-nav .owl-next{
+#kids .owl-nav-tem .owl-next{
   outline: none;
   position: absolute;
   right: -85px;
 }
 
-#kids .owl-nav .owl-next:before {
+#kids .owl-nav-tem .owl-next:before {
   display: inline-block;
   font-family: 'FontAwesome';
   color: #2a2a2a;
@@ -2231,17 +2233,17 @@ responsive
   .main-banner .right-content .right-first-image .thumb .hover-content p {
     display: block;
   }
-  .header-area .main-nav .nav li.submenu:after {
+  .h-area .main-nav-tem .nav-tem li.submenu:after {
     right: 3px;
   }
-  .header-area .main-nav .nav li.submenu {
+  .h-area .main-nav-tem .nav-tem li.submenu {
     padding-right: 15px;
   }
-  .header-area .main-nav .nav li {
+  .h-area .main-nav-tem .nav-tem li {
     padding-right: 5px;
     padding-left: 5px;
   }
-  .header-area .main-nav .nav li a {
+  .h-area .main-nav-tem .nav-tem li a {
     font-size: 14px;
     letter-spacing: 0px;
   }
